SONARIAC-695 Create Importer for Hadolint (#645)